# cubekit

./: .gitignore  LICENSE  README.md  pyproject.toml
cubekit/: __init__.py
cubekit/core/: __init__.py  api.py  colors.py  coordinates.py  cube.py  cube3x3.py  cube_movements.py  cube_statics.py  directions.py  face.py  formula_notations.py  moves.py  shortnames.py
cubekit/solver3x3/: __init__.py  api.py  base_solver3x3.py  first_corners.py  first_cross.py  first_layer.py  last_layer.py  second_layer.py  solving_algos.py
examples/: check_import.py  demo_solve.py
examples/validation/: multiprocesses_test.py  test_solver3x3.py
